--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/src/features/fetchInterceptor.js"></script>
+    <script src="/src/features/fetchInterceptor.js" type="module"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
